<resources>
    <string name="app_name">Reckoning Skills</string>
    <string name="app_name_long">Privacy Friendly Reckoning Skills</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_tutorial" translatable="false">Tutorial</string>
    <string name="action_score">Highscore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>
    <string name="main_button_inactive_toast">At least one operator needs to be active.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue</string>
    <string name="game_button_highscore">Highscore</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>
    <string name="game_mode_one">Number Range</string>
    <string name="game_mode_two">Choose operators</string>
    <string name="number_range_one" translatable="false">10</string>
    <string name="number_range_two" translatable="false">100</string>
    <string name="number_range_three" translatable="false">1000</string>
    <string name="number_range_four" translatable="false">10000</string>
    <string name="game_button_confirm">Confirm</string>
    <string name="game_button_reset">Reset</string>
    <string name="game_max_length_toast">Result can\'t be larger than 9999999</string>

    <!--###EXERCISE###-->
    <string name="feedback_positive">Right Answer</string>
    <string name="feedback_negative">Wrong Answer</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="alert_title">Name Input</string>

    <!--###RESULT###-->
    <string name="title_activity_result">Result</string>
    <string name="upto">Up to</string>
    <string name="result_score">Highscore</string>
    <string name="result_solved">Solved</string>
    <string name="result_solved_of">of</string>
    <string name="result_highscore">Highscore</string>
    <string name="result_toast_selected">Selected exercise to be repeated</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly Reckoning Skills?</string>
    <string name="help_whatis_answer">Privacy Friendly Reckoning Skills generates basic arithmetic mental exercises in four different number spaces. </string>

    <string name="help_game">How can I start a game?</string>
    <string name="help_game_answer">You can start a game by selecting one of the four number ranges and at least one of the four operators in the main menu and tapping the "New Game" button.</string>

    <string name="help_pause">How can I pause and continue a game?</string>
    <string name="help_pause_answer">Leaving the game window, for example by tapping the back button on the top left or by tapping the back button on your phone will pause the game. You can continue a paused game by tapping the "Continue" button in the main menu.</string>

    <string name="help_revisit">How can I revisit a particular exercise?</string>
    <string name="help_revisit_answer">You can select a particular exercise to be tested again by tapping it on the result screen after you finished a game.</string>

    <string name="help_score">How is the highscore calculated?</string>
    <string name="help_score_answer">The highscore takes into account how many exercises were solved successfully and how much time it took you to answer all of them.</string>

    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Reckoning Skills does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions does the App require?</string>
    <string name="help_permission_answer">Privacy Friendly Reckoning Skills does not require any permissions.</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">rfstu(Github-User)</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-math">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>
    <string name="pref_header_feedback">Feedback</string>
    <string name="pref_header_user">User</string>
    <string name="pref_switch_feedback">Direct Feedback</string>
    <string name="pref_switch_feedback_summary">Receive direct feedback</string>
    <string name="pref_text_defaultname">Default name</string>
    <string name="pref_text_defaultname_summary">Set default Name</string>
    <string name="pref_switch_answer">Correct Answer</string>
    <string name="pref_switch_answer_summary">Show correct answer instantly</string>

    <!-- ###SCORE### -->
    <string name="title_activity_score">Highscores</string>
    <string name="score_credit">Points</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Practice your reckoning skills by solving basic arithmetic exercises in different number ranges.</string>

    <string name="slide2_heading">Operators and number ranges</string>
    <string name="slide2_text">You can choose between four operators and number ranges in the main menu. Tapping any of the operators will enable/disable it for the next game.</string>

    <string name="slide3_heading">Repeating exercises</string>
    <string name="slide3_text">You can mark exercises to be repeated by tapping them on the result screen.</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
