<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_feedback">
        <SwitchPreference
            android:id="@+id/pref_example_switch"
            android:key="pref_switch_feedback"
            android:title="@string/pref_switch_feedback"
            android:summary="@string/pref_switch_feedback_summary"
            android:defaultValue="false"/>
        <SwitchPreference
            android:id="@+id/pref_switch_answer"
            android:key="pref_switch_answer"
            android:title="@string/pref_switch_answer"
            android:summary="@string/pref_switch_answer_summary"
            android:dependency="pref_switch_feedback"
            android:defaultValue="false"/>
        </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_user">
        <EditTextPreference
            android:key="weight"
            android:title="@string/pref_text_defaultname"
            android:persistent="true"
            android:summary="@string/pref_text_defaultname_summary" />
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
