<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.secuso.privacyfriendlymath.activities.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    style="@style/AlertDialog.AppCompat">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layoutDirection="ltr"
        android:layout_weight="4">

        <TextView
            android:id="@+id/game_mode_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_mode_one"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:onClick="onClick"/>
        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:onClick="onClick"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/game_mode_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_mode_two"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:onClick="onClick"
            android:text="+" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:onClick="onClick"
            android:text="-" />

        <Button
            android:id="@+id/button_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:onClick="onClick"
            android:text="*" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:onClick="onClick"
            android:text="/" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:divider="#000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="8"
        tools:context="tu_darmstadt.sudoku.ui.MainActivity">

        <Button
            android:id="@+id/button_start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_fullwidth"
            android:onClick="onClick"
            android:text="@string/game_button_start"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/game_button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_disabled"
            android:onClick="onClick"
            android:text="@string/game_button_continue"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
